confirm and error modals, fixing intershift get upon db changes

--- a/ui/src/Layout/ErrorModal.scss
+++ b/ui/src/Layout/ErrorModal.scss
@@ -8,6 +8,7 @@
 }
 
 .dashboard-modal-error-field-head {font-size: 0.7em;}
-.warning-message {display: inline;}
-.icon {color: red; font-size: 2em;}
+.warning-message{display: inline; color: red;}
+.success-message{display: inline; color: green;}
+.icon {font-size: 2em;}
 .error-button {display: block; margin: 0 auto;}
